--- a/backend-api/Trotter/src/main/resources/application.properties
+++ b/backend-api/Trotter/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=Trotter
-spring.datasource.url=jdbc:postgresql://ep-dark-block-a8xy9s07-pooler.eastus2.azure.neon.tech/neondb?user=neondb_owner&password=npg_Xw2nIv4RKDAL&sslmode=require
+spring.datasource.url=
 spring.jpa.hibernate.ddl-auto=update 
 
