Ignore application.properties to protect sensitive info

--- a/backend-api/Trotter/.gitignore
+++ b/backend-api/Trotter/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignore sensitive Spring Boot config
+backend-api/src/main/resources/application.properties
+
