--- a/backend-api/Trotter/src/main/resources/application.properties
+++ b/backend-api/Trotter/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=Trotter
-spring.datasource.url=
+spring.datasource.url=jdbc:postgresql://ep-proud-firefly-a8df5qru-pooler.eastus2.azure.neon.tech/neondb?user=neondb_owner&password=npg_Xw2nIv4RKDAL&sslmode=require
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.web=DEBUG
+
