--- a/backend-api/Trotter/src/main/resources/application.properties
+++ b/backend-api/Trotter/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=Trotter
 spring.datasource.url=jdbc:postgresql://ep-fragrant-glade-a8jygj8u-pooler.eastus2.azure.neon.tech/neondb?user=neondb_owner&password=npg_Xw2nIv4RKDAL&sslmode=require
 spring.jpa.hibernate.ddl-auto=update
-
+debug=true
